--- a/manager/index.html
+++ b/manager/index.html
@@ -18,6 +18,7 @@
                 <div><span i18n>popup_download_speed</span><span id="download">0</span></div>
                 <div><span i18n>popup_upload_speed</span><span id="upload">0</span></div>
             </div>
+            <div id="aria2_ver"></div>
             <button id="purge_btn" i18n>popup_purge</button>
             <button id="options_btn" i18n>popup_options</button>
         </div>
@@ -227,7 +228,7 @@
                 <div id="ratio"></div>
             </div>
         </div>
-        <script src="https://jc3213.github.io/jslib/aria2/aria2.max.js"></script>
+        <script src="/jslib/aria2/aria2.max.js"></script>
         <script src="i18n.js"></script>
         <script src="https://jc3213.github.io/download_with_aria2/chromium/pages/popup/popup.js"></script>
         <script src="main.js"></script>
