--- a/manager/index.html
+++ b/manager/index.html
@@ -48,68 +48,62 @@
                 <input id="proxy_server" type="url" placeholder="http://127.0.0.1:1280/">
             </div>
         </div>
-        <div id="adduri">
-            <div class="menu">
+        <div id="adduri" class="options">
+            <div>
                 <div class="title" i18n>task_referer</div>
                 <div class="flex">
                     <input id="referer" type="text">
                     <button id="enter_btn" i18n>task_submit</button>
                 </div>
             </div>
-            <div class="menu">
+            <div>
                 <div class="title" i18n>task_batch</div>
                 <div>
                     <textarea id="entry" rows="2"></textarea>
                 </div>
             </div>
-            <div class="menu flex">
+            <div class="menu">
+                <div class="title" i18n>aria2_adv_dir</div>
                 <div>
-                    <div class="title" i18n>aria2_adv_dir</div>
-                    <div>
-                        <input id="dir" type="text">
-                    </div>
-                </div>
-                <div>
-                    <div class="title" i18n>task_proxy</div>
-                    <div class="flex">
-                        <input id="all-proxy" type="url">
-                        <button id="proxy_btn">🔖</button>
-                    </div>
+                    <input id="dir" type="text">
                 </div>
             </div>
-            <div class="menu flex">
-                <div>
-                    <div class="title" i18n>aria2_http_split</div>
-                    <div>
-                        <input id="split" type="number">
-                    </div>
-                    <span i18n>common_default</span>: <u><i>5</i></u>
-                </div>
-                <div>
-                    <div class="title" i18n>aria2_http_size</div>
-                    <div>
-                        <input id="min-split-size" type="text">
-                        <span class="float">B</span>
-                    </div>
-                    <span i18n>common_default</span>: <u><i>20M</i></u>
+            <div class="menu">
+                <div class="title" i18n>task_proxy</div>
+                <div class="flex">
+                    <input id="all-proxy" type="url">
+                    <button id="proxy_btn">🔖</button>
                 </div>
             </div>
-            <div class="menu flex">
+            <div class="menu">
+                <div class="title" i18n>aria2_http_split</div>
                 <div>
-                    <div class="title" i18n>aria2_max_connection</div>
-                    <div>
-                        <input id="max-connection-per-server" type="number">
+                    <input id="split" type="number">
+                </div>
+                <span i18n>common_default</span>: <u><i>5</i></u>
+            </div>
+            <div class="menu">
+                <div class="title" i18n>aria2_http_size</div>
+                <div>
+                    <input id="min-split-size" type="text">
+                    <span class="float">B</span>
+                </div>
+                <span i18n>common_default</span>: <u><i>20M</i></u>
+            </div>
+            <div class="menu">
+                <div class="title" i18n>aria2_max_connection</div>
+                <div>
+                    <input id="max-connection-per-server" type="number">
                     </div>
                     <span i18n>common_default</span>: <u><i>1</i></u>
                 </div>
+            <div class="menu">
+                <div class="title" i18n>task_download</div>
                 <div>
-                    <div class="title" i18n>task_download</div>
-                    <div>
-                        <input id="max-download-limit" type="text">
-                        <span class="float">B/s</span>
-                    </div>
-                    <span i18n>common_disabled</span>: <u><i>0</i></u>
+                    <input id="max-download-limit" type="text">
+                    <span class="float">B/s</span>
                 </div>
+                <span i18n>common_disabled</span>: <u><i>0</i></u>
             </div>
         </div>
         <hr>
@@ -138,61 +132,42 @@
                 <div id="meter">
                     <div id="ratio"></div>
                 </div>
-                <div id="options">
-                    <div class="menu flex">
-                        <div title="task_download_title">
-                            <div class="title" i18n>task_download</div>
-                            <div>
-                                <input id="max-download-limit" type="text">
-                                <span class="float">B/s</span>
-                            </div>
-                        </div>
-                        <div title="task_upload_title">
-                            <div class="title" i18n>task_upload</div>
-                            <div>
-                                <input id="max-upload-limit" type="text">
-                                <span class="float">B/s</span>
-                            </div>
+                <div id="options" class="options">
+                    <div class="menu">
+                        <div class="title" i18n>task_download</div>
+                        <div>
+                            <input id="max-download-limit" type="text">
+                            <span class="float">B/s</span>
                         </div>
                     </div>
-                    <div class="menu" title="task_proxy_title">
+                    <div class="menu" data-p2p>
+                        <div class="title" i18n>task_upload</div>
+                        <div>
+                            <input id="max-upload-limit" type="text">
+                            <span class="float">B/s</span>
+                        </div>
+                    </div>
+                    <div class="menu">
                         <div class="title" i18n>task_proxy</div>
                         <div class="flex">
                             <input id="all-proxy" type="url">
                             <button id="proxy_btn">🔖</button>
                         </div>
                     </div>
-                    <div class="menu flex" data-http>
-                        <div title="aria2_http_split_title">
-                            <div class="title" i18n>aria2_http_split</div>
-                            <div>
-                                <input id="split" type="number">
-                            </div>
-                        </div>
-                        <div title="aria2_http_size_title">
-                            <div class="title" i18n>aria2_http_size</div>
-                            <div>
-                                <input id="min-split-size" type="text">
-                                <span class="float">B</span>
-                            </div>
+                    <div class="menu" data-http>
+                        <div class="title" i18n>aria2_http_split</div>
+                        <div>
+                            <input id="split" type="number">
                         </div>
                     </div>
-                    <div class="menu flex" data-p2p>
-                        <div title="aria2_bt_ratio_title">
-                            <div class="title" i18n>aria2_bt_ratio</div>
-                            <div>
-                                <input id="seed-ratio" type="number" min="0" step="0.1">
-                            </div>
-                        </div>
-                        <div title="aria2_bt_seed_title">
-                            <div class="title" i18n>aria2_bt_seed</div>
-                            <div>
-                                <input id="seed-time" type="number">
-                                <span class="float" i18n>time_minute_full</span>
-                            </div>
+                    <div class="menu" data-http>
+                        <div class="title" i18n>aria2_http_size</div>
+                        <div>
+                            <input id="min-split-size" type="text">
+                            <span class="float">B</span>
                         </div>
                     </div>
-                    <div class="menu" title="aria2_bt_remove_title" data-p2p>
+                    <div class="menu" data-p2p>
                         <div class="title" i18n>aria2_bt_remove</div>
                         <div>
                             <select id="bt-remove-unselected-file">
@@ -201,12 +176,25 @@
                             </select>
                         </div>
                     </div>
-                    <div class="menu" title="task_files_title">
+                    <div class="menu" data-p2p>
+                        <div class="title" i18n>aria2_bt_ratio</div>
+                        <div>
+                            <input id="seed-ratio" type="number" min="0" step="0.1">
+                        </div>
+                    </div>
+                    <div class="menu" data-p2p>
+                        <div class="title" i18n>aria2_bt_seed</div>
+                        <div>
+                            <input id="seed-time" type="number">
+                            <span class="float" i18n>time_minute_full</span>
+                        </div>
+                    </div>
+                    <div>
                         <div class="title" i18n>task_files</div>
                         <div id="files"></div>
                         <button id="save_btn" class="float" i18n>common_save</button>
                     </div>
-                    <div class="menu" title="task_urls_title" data-http>
+                    <div data-http>
                         <div class="title" i18n>task_urls</div>
                         <div class="flex">
                             <input type="url">
