--- a/manager/index.html
+++ b/manager/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://jc3213.github.io/download_with_aria2/chromium/pages/popup/popup.css">
         <link rel="stylesheet" href="main.css">
     </head>
-    <body class="full">
+    <body>
         <div id="menu">
             <button id="queue_btn" i18n>popup_queue</button>
             <button id="purge_btn" i18n>popup_purge</button>
