--- a/manager/index.html
+++ b/manager/index.html
@@ -201,15 +201,15 @@
                 </div>
             </div>
             <div class="uri">
-                <div id="uri"></div>
-                <div id="used" class="checked">0</div>
-                <div id="wait" class="suspend">0</div>
+                <div id="this_uri"></div>
+                <div id="used" class="ready">0</div>
+                <div id="wait">0</div>
             </div>
             <div class="file">
-                <div id="index"></div>
+                <div id="this_file"></div>
                 <div id="name"></div>
                 <div id="size"></div>
-                <div id="ratio"></div>
+                <div id="done"></div>
             </div>
         </div>
         <script src="https://jc3213.github.io/jslib/aria2/aria2.max.js"></script>
