--- a/manager/index.html
+++ b/manager/index.html
@@ -32,19 +32,19 @@
         <div id="setting">
             <div class="menu">
                 <div class="title" i18n>option_jsonrpc_uri</div>
-                <input id="jsonrpc_uri" type="url">
+                <input id="aria2Server" type="url">
             </div>
             <div class="menu">
                 <div class="title" i18n>option_jsonrpc_token</div>
-                <input id="jsonrpc_token" type="text" placeholder="$$secret$$">
+                <input id="aria2Token" type="text" placeholder="$$secret$$">
             </div>
             <div class="menu">
                 <label class="title" i18n>option_manager_interval</label>
-                <input id="manager_interval" type="number" min="5000" max="30000" step="1000">
+                <input id="aria2Interval" type="number" min="5000" max="30000" step="1000">
             </div>
             <div class="menu">
                 <div class="title" i18n>option_proxy_server</div>
-                <input id="proxy_server" type="url" placeholder="http://127.0.0.1:1280/">
+                <input id="aria2Proxy" type="url" placeholder="http://127.0.0.1:1280/">
             </div>
         </div>
         <div id="adduri" class="options">
