--- a/manager/index.html
+++ b/manager/index.html
@@ -53,6 +53,8 @@
                 <div class="flex">
                     <input id="referer" type="text">
                     <button id="enter_btn" i18n>task_submit</button>
+                    <button id="upload_btn" i18n>task_base64</button>
+                    <input id="uploader" type="file" accept=".torrent, .metalink, .meta4">
                 </div>
             </div>
             <div>
