--- a/manager/index.html
+++ b/manager/index.html
@@ -213,7 +213,7 @@
                 <div id="done"></div>
             </div>
         </div>
-        <script src="/jslib/aria2/aria2.max.js"></script>
+        <script src="/jslib/aria2/aria2.core.js"></script>
         <script src="i18n.js"></script>
         <script src="https://jc3213.github.io/download_with_aria2/chromium/pages/popup/popup.js"></script>
         <script src="main.js"></script>
