--- a/manager/index.html
+++ b/manager/index.html
@@ -39,7 +39,7 @@
                         <option value="ws">WS</option>
                         <option value="wss">WSS</option>
                     </select>
-                    <input id="aria2Host" type="url" data-value="localhost:6800">
+                    <input id="aria2Url" type="url" data-value="localhost:6800/jsonrpc">
                     <input id="aria2Secret" type="text" placeholder="$$secret$$" data-value="">
                     <button id="commit_btn" i18n>common_save</button>
                 </div>
