--- a/manager/index.html
+++ b/manager/index.html
@@ -31,7 +31,7 @@
         </div>
         <div id="setting" class="options">
             <div>
-                <div class="title" i18n>option_jsonrpc</div>
+                <h4 i18n>option_jsonrpc</h4>
                 <div class="flex">
                     <select id="aria2Scheme" data-value="http">
                         <option value="http" selected>HTTP</option>
@@ -49,13 +49,13 @@
                 <input id="aria2Interval" type="number" min="5000" max="30000" step="1000" data-value="10000">
             </div>
             <div class="menu">
-                <div class="title" i18n>option_proxy_server</div>
+                <h4 i18n>option_proxy_server</h4>
                 <input id="aria2Proxy" type="url" placeholder="http://127.0.0.1:1280/" data-value="">
             </div>
         </div>
         <div id="adduri" class="options">
             <div>
-                <div class="title" i18n>task_referer</div>
+                <h4 i18n>task_referer</h4>
                 <div class="flex">
                     <input id="referer" type="text">
                     <button id="enter_btn" i18n>task_submit</button>
@@ -64,45 +64,45 @@
                 </div>
             </div>
             <div>
-                <div class="title" i18n>task_batch</div>
+                <h4 i18n>task_batch</h4>
                 <div>
                     <textarea id="entry" rows="2"></textarea>
                 </div>
             </div>
             <div class="menu">
-                <div class="title" i18n>aria2_adv_dir</div>
+                <h4 i18n>aria2_adv_dir</h4>
                 <div>
                     <input data-rid="dir" type="text">
                 </div>
             </div>
             <div class="menu">
-                <div class="title" i18n>task_proxy</div>
+                <h4 i18n>task_proxy</h4>
                 <div class="flex">
                     <input data-rid="all-proxy" type="url">
                     <button id="proxy_btn">💾</button>
                 </div>
             </div>
             <div class="menu">
-                <div class="title" i18n>aria2_http_split</div>
+                <h4 i18n>aria2_http_split</h4>
                 <div>
                     <input data-rid="split" type="number">
                 </div>
             </div>
             <div class="menu">
-                <div class="title" i18n>aria2_http_size</div>
+                <h4 i18n>aria2_http_size</h4>
                 <div>
                     <input data-rid="min-split-size" type="text">
                     <span class="float">B</span>
                 </div>
             </div>
             <div class="menu">
-                <div class="title" i18n>aria2_max_connection</div>
+                <h4 i18n>aria2_max_connection</h4>
                 <div>
                     <input data-rid="max-connection-per-server" type="number">
                 </div>
             </div>
             <div class="menu">
-                <div class="title" i18n>task_download</div>
+                <h4 i18n>task_download</h4>
                 <div>
                     <input data-rid="max-download-limit" type="text">
                     <span class="float">B/s</span>
@@ -120,7 +120,7 @@
         </div>
         <div class="template">
             <div class="session">
-                <div class="name title"></div>
+                <div class="name"></div>
                 <div>🖥️ <span class="completed"></span></div>
                 <div>⏲️ <span class="day"></span><span class="hour"></span><span class="minute"></span><span class="second"></span><span class="infinite">∞</span></div>
                 <div>📦 <span class="total"></span></div>
@@ -128,50 +128,50 @@
                 <div>⏬ <span class="download"></span></div>
                 <div data-p2p>⏫ <span class="upload"></span></div>
                 <div class="manage">
-                    <button data-bid="remove_btn">❌</button>
-                    <button data-bid="detail_btn">⚙️</button>
-                    <button data-bid="retry_btn">♻️</button>
+                    <button class="purge" data-bid="remove_btn">❌</button>
+                    <button class="detail" data-bid="detail_btn">⚙️</button>
+                    <button class="retry" data-bid="retry_btn">♻️</button>
                 </div>
                 <div class="meter" data-bid="pause_btn">
                     <div class="ratio" data-bid="pause_btn"></div>
                 </div>
                 <div class="options">
-                    <div class="menu" title="task_download_title">
-                        <div class="title" i18n>task_download</div>
+                    <div class="menu">
+                        <h4 i18n>task_download</h4>
                         <div>
                             <input data-rid="max-download-limit" type="text">
                             <span>B/s</span>
                         </div>
                     </div>
-                    <div class="menu" title="task_upload_title" data-p2p>
-                        <div class="title" i18n>task_upload</div>
+                    <div class="menu" data-p2p>
+                        <h4 i18n>task_upload</h4>
                         <div>
                             <input data-rid="max-upload-limit" type="text">
                             <span>B/s</span>
                         </div>
                     </div>
-                    <div class="menu" title="task_proxy_title">
-                        <div class="title" i18n>task_proxy</div>
+                    <div class="menu">
+                        <h4 i18n>task_proxy</h4>
                         <div class="flex">
                             <input data-rid="all-proxy" type="url">
                             <button data-bid="proxy_btn">💾</button>
                         </div>
                     </div>
-                    <div class="menu" title="aria2_http_split_title" data-http>
-                        <div class="title" i18n>aria2_http_split</div>
+                    <div class="menu" data-http>
+                        <h4 i18n>aria2_http_split</h4>
                         <div>
                             <input data-rid="split" type="number">
                         </div>
                     </div>
-                    <div class="menu" title="aria2_http_size_title" data-http>
-                        <div class="title" i18n>aria2_http_size</div>
+                    <div class="menu" data-http>
+                        <h4 i18n>aria2_http_size</h4>
                         <div>
                             <input data-rid="min-split-size" type="text">
                             <span>B</span>
                         </div>
                     </div>
-                    <div class="menu" title="aria2_bt_remove_title" data-p2p>
-                        <div class="title" i18n>aria2_bt_remove</div>
+                    <div class="menu" data-p2p>
+                        <h4 i18n>aria2_bt_remove</h4>
                         <div>
                             <select data-rid="bt-remove-unselected-file">
                                 <option value="true" i18n>aria2_true</option>
@@ -179,26 +179,26 @@
                             </select>
                         </div>
                     </div>
-                    <div class="menu" title="aria2_bt_ratio_title" data-p2p>
-                        <div class="title" i18n>aria2_bt_ratio</div>
+                    <div class="menu" data-p2p>
+                        <h4 i18n>aria2_bt_ratio</h4>
                         <div>
                             <input data-rid="seed-ratio" type="number" min="0" step="0.1">
                         </div>
                     </div>
-                    <div class="menu" title="aria2_bt_seed_title" data-p2p>
-                        <div class="title" i18n>aria2_bt_seed</div>
+                    <div class="menu" data-p2p>
+                        <h4 i18n>aria2_bt_seed</h4>
                         <div>
                             <input data-rid="seed-time" type="number">
                             <span i18n>time_minute_full</span>
                         </div>
                     </div>
-                    <div title="task_files_title">
-                        <div class="title" i18n>task_files</div>
+                    <div>
+                        <h4 i18n>task_files</h4>
                         <div class="files"></div>
-                        <button data-bid="save_btn" i18n>common_save</button>
+                        <button class="save" data-bid="save_btn" i18n>common_save</button>
                     </div>
-                    <div title="task_urls_title" data-http>
-                        <div class="title" i18n>task_urls</div>
+                    <div data-http>
+                        <h4 i18n>task_urls</h4>
                         <div class="flex">
                             <input type="url">
                             <button data-bid="adduri_btn">➕</button>
@@ -208,15 +208,16 @@
                 </div>
             </div>
             <div class="file">
-                <div></div>
-                <div></div>
-                <div></div>
+                <input class="check" type="checkbox">
+                <label class="index" data-bid="file_btn"></label>
+                <div class="name"></div>
+                <div class="size"></div>
                 <div class="ratio"></div>
             </div>
             <div class="uri">
-                <div></div>
-                <div class="ready">0</div>
-                <div>0</div>
+                <div class="link" data-bid="uri_btn"></div>
+                <div class="used">0</div>
+                <div class="wait">0</div>
             </div>
         </div>
         <script src="/jslib/aria2/aria2.js"></script>
