--- a/sample/sample.html
+++ b/sample/sample.html
@@ -8,7 +8,7 @@
             <input id="filereader" type="file">
         </div>
         <div>
-            <label for="chromei18ntrim">Chrome i18n Trimmer</label>
+            <label for="chromei18ntrim">JSON Reader</label>
             <input id="chromei18ntrim" type="file" accept=".json">
         </div>
         <textarea id="fileresult" rows="8" disabled></textarea>
