--- a/sample/sample.html
+++ b/sample/sample.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <title>Javascript Library Test Sample</title>
     </head>
     <body>
         <div id="dropzone">
