--- a/sample/sample.html
+++ b/sample/sample.html
@@ -6,11 +6,11 @@
     <body>
         <div id="dropzone">
             <button><label for="filereader">File Reader</label></button>
-            <button><label for="chromei18ntrim">JSON Reader</label></button>
+            <button><label for="jsonreader">JSON Reader</label></button>
         </div>
         <div style="display: none;">
             <input id="filereader" type="file">
-            <input id="chromei18ntrim" type="file" accept=".json">
+            <input id="jsonreader" type="file" accept=".json">
         </div>
         <textarea id="fileresult" rows="8" disabled></textarea>
         <div class="template">
