--- a/manager/index.html
+++ b/manager/index.html
@@ -220,7 +220,7 @@
                 <div class="wait">0</div>
             </div>
         </div>
-        <script src="/jslib/aria2/aria2.js"></script>
+        <script src="https://jc3213.github.io/aria2.js/aria2.js"></script>
         <script src="i18n.js"></script>
         <script src="https://jc3213.github.io/download_with_aria2/chromium/pages/popup/popup.js"></script>
         <script src="main.js"></script>
