--- a/sample/sample.html
+++ b/sample/sample.html
@@ -23,7 +23,7 @@
         </div>
         <div id="urlresult"></result>
         <script src="/jslib/ui/jsui.full.js"></script>
-        <script src="/jslib/js/filereader.js"></script>
+        <script src="https://jc3213.github.io/promisefilereader.js/filereader.js"></script>
         <script src="sample.js"></script>
     </body>
 </html>
